# sound_vizualiser

./: .gitignore  CLAUDE.md  project_spec_draft.md  project_spec_final.md  todo.txt
docs/superpowers/plans/: 2026-06-12-phase-1a-plumbing-skeleton.md  2026-06-12-phase-1b-spectrum.md  2026-06-12-phase1c-scalar-features.md  2026-06-12-phase1d-configurability.md  2026-07-02-phase2a-spectrogram.md  2026-07-02-phase2b-radial-spectrum.md  2026-07-03-audio-playback.md  2026-07-03-phase2d-ui-controls.md  2026-07-03-phase2e-mic-input.md  2026-07-03-transport-toolbar.md
docs/superpowers/specs/: 2026-06-12-phase-1a-plumbing-skeleton-design.md  2026-06-12-phase-1b-spectrum-design.md  2026-06-12-phase1c-scalar-features-design.md  2026-06-12-phase1d-configurability-design.md  2026-07-02-phase2a-design.md  2026-07-02-phase2b-design.md  2026-07-03-audio-playback-design.md  2026-07-03-phase2d-ui-controls-design.md  2026-07-03-phase2e-mic-input-design.md  2026-07-03-phase2e-transport-toolbar-design.md  2026-07-03-transport-toolbar-design.md
engine/: CMakeLists.txt  build.sh
engine/bindings/: python_bindings.cpp
engine/include/sound_viz/: engine.h  feature_frame.h
engine/src/: dsp_features.cpp  dsp_features.h  engine.cpp  fft.cpp  fft.h  ring_buffer.cpp  ring_buffer.h  window.cpp  window.h
engine/tests/: dsp_features_test.cpp  engine_test.cpp  fft_test.cpp  python_smoke_test.py  ring_buffer_test.cpp  window_test.cpp
frontend/: audio_math.py  audio_playback.py  main.py  mic_input.py  requirements.txt  run.sh  setup_venv.sh
frontend/scripts/: generate_test_tone.py  smoke_test_harness.py
frontend/tests/: test_audio_math.py  test_audio_playback.py  test_mic_input.py
